[metadata]
name = exli
version = 0.1.1
author = Adwaith-Rajesh
author_email = adwaithajesh3180@gmail.com
description = An alias manager and an infinitely extensible CLI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Adwaith-Rajesh/exli
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    xi = exli.main:main
    exli = exli.main:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
ignore_errors = true
